carousel stretching fixed on content page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -412,7 +412,6 @@ input::placeholder {
 
 .carousel-item img {
     min-height: 12rem;
-    max-height: 12rem
 }
 
 .most-popular .col-md {
